word wrap issue in <a>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@
 }
 
 a { text-decoration: none;
-  overflow-wrap: break-word; }
+  text-overflow: ellipsis; }
 
 li { list-style: none; }
 
